ignore.d.server/gfa-rspamd
# Jun 25 07:29:14 mail.zumbi.com.ar rspamd[6634]: <da6306>; radix; rspamd_radix_add_iplist: invalid IP address: localhost
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; radix; rspamd_radix_add_iplist: invalid IP address: localhost$


#Jun 26 09:05:16 mail rspamd[2256]: <46384e>; proxy; rspamd_redis_timeout: connection to redis server 192.168.139.67 timed out
#^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; proxy; rspamd_redis_timeout: connection to redis server [.:[:digit:]]+ timed out$


#Jun 26 09:05:16 mail rspamd[2256]: <46384e>; proxy; rspamd_stat_classifiers_process: skip statistics as HAM class is missing
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; proxy; rspamd_stat_classifiers_process: skip statistics as HAM class is missing$

# Jun 26 10:42:15 mail rspamd[2256]: <68f800>; proxy; fuzzy_check_timer_callback: got IO timeout with server fuzzy.rspamd.com(88.99.142.95), after 1 retransmits
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; proxy; fuzzy_check_timer_callback: got IO timeout with server fuzzy\.rspamd\.com\([[:xdigit:]\.:]+\), after 1 retransmits$


# Jun 30 02:06:26 mail rspamd[2256]: <692faf>; lua; asn.lua:65: error querying dns: query timed out
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; lua; asn\.lua:[0-9]+: error querying dns: query timed out$

# Jun 29 19:27:19 mail rspamd[2256]: <fc195c>; proxy; rspamd_task_process: learn error: <undef> contains less tokens than required for bayes classifier: 10 < 11
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; proxy; rspamd_task_process: learn error: <[._[:alnum:]@_\.-]+> contains less tokens than required for bayes classifier: [0-9]+ < [0-9]+$


# Jun 29 18:36:26 mail rspamd[2256]: <b98561>; proxy; rspamd_task_process: learn error: <CAC8jRerjZeDsG4GEugZ6HJ_9NXXcrOUo36Bfn-ZUp8Vn_AT1Qg@mail.gmail.com> has been already learned as spam, ignore it
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; proxy; rspamd_task_process: learn error: <[._[:alnum:]@_\.-]+> has been already learned as (ham|spam), ignore it$

# Jul  2 07:06:02 mail rspamd[2502]: <36e484>; lua; once_received.lua:50: error looking up 9.126.221.115.in-addr.arpa: query timed out
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; lua; once_received\.lua:50: error looking up [[:alnum:]\.-]+: query timed out$

# Jul  7 00:41:08 mail rspamd[5399]: <144328>; csession; rspamd_task_process: learn error: <353cec92c872268978653bd90010edbc@eformaciononline.com> is skipped for bayes classifier: already in class spam; probability 100.00%
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; csession; rspamd_task_process: learn error:  <[[:alnum:]@\.]+> is skipped for bayes classifier: already in class spam; probability [[:digit:]\.]+%$

# Jul  7 12:20:37 mail rspamd[5398]: <ed0672>; lua; once_received.lua:50: error looking up 107.6.57.41.in-addr.arpa: server fail
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; lua; once_received\.lua:50: error looking up [[:alnum:]\.-]+: server fail$

# Jul 20 10:11:10 mail rspamd[5398]: <7508ab>; proxy; rspamd_mime_text_part_maybe_convert: <05314162457EDF8EBEAB16F6E603BE49@dap>: cannot convert from GB2312 to utf8: cannot convert data to unicode from GB2312: U_ILLEGAL_CHAR_FOUND
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; proxy; rspamd_mime_text_part_maybe_convert: <[[:alnum:]@]+>: cannot convert from [[:alnum:]]+ to utf8: cannot convert data to unicode from [[:alnum:]]+: U_ILLEGAL_CHAR_FOUND$

# Jul 24 03:03:49 mail rspamd[3777]: <9i1dgi>; map; http_map_error: error reading https://www.openphish.com/feed.txt(146.185.189.167:443): connection with http server terminated incorrectly: ssl connect error: syscall fail: Connection refused
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <[[:alnum:]]+>; map; http_map_error: error reading https:\/\/www.openphish\.com\/feed\.txt\([[:xdigit:]\.:]+\): connection with http server terminated incorrectly: ssl connect error: syscall fail: Connection refused$

# Jul 24 09:30:57 mail rspamd[3776]: <>; rdns; rdns_make_request_full: got empty name to resolve
^\w{3} [ :[:digit:]]{11} [._[:alnum:]-]+ rspamd\[[[:digit:]]+\]: <>; rdns; rdns_make_request_full: got empty name to resolve$
